# llm-bot

./: .env.example  .env.example.llamacpp  .env.openrouter.example  .gitignore  AGENTS.md  Containerfile  README.md  app.py  openapi3_1.yml  pyproject.toml
.github/workflows/: build_and_merge.yml  release.yml
docs/agents/: architecture-and-boundaries.md  development-workflow.md  llm-task-development.md
llm_bot/: __init__.py  app.py  client.py  config.py  log.py  lookup_client.py  reasoning.py  routes.py  schemas.py
llm_bot/prompts/: cluster.txt  cybersec_classification.txt  entity_relationship_extraction.txt  ner.txt  sentiment.txt  summarize.txt  title.txt  translate.txt
llm_bot/tasks/: cluster.py  cybersec_classification.py  entity_linking.py  entity_relationship_extraction.py  link.py  link_task.py  linking.py  llm_utils.py  ner.py  ner_link.py  ner_postprocessing.py  sentiment.py  summarize.py  task_utils.py  title.py  translate.py
tests/: conftest.py  test_app.py  test_client.py  test_cluster_task.py  test_cybersec_classification_task.py  test_entity_relationship_extraction_task.py  test_helpers.py  test_link_task.py  test_linking.py  test_lookup_client.py  test_ner_link_task.py  test_ner_task.py  test_schemas.py  test_sentiment_schemas.py  test_sentiment_task.py  test_summarize_task.py  test_title_task.py  test_translate_task.py
