[project]
name = "llm-bot"
description = "LLM-backed bot service for Taranis AI"
readme = "README.md"
license = "EUPL-1.2"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "granian",
    "niquests",
    "pydantic>=2.11.0",
    "pydantic-settings",
    "quart>=0.20.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "ruff",
]

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
tag_regex = "^([0-9].[0-9].[0-9])"
local_scheme = "no-local-version"

[tool.setuptools]
packages = ["llm_bot"]

[tool.ruff]
line-length = 142
target-version = "py313"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
asyncio_mode = "auto"
